--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,6 @@ img {
     border: 1px solid #EEEEEE;
     border-top: 0;
     padding: 20px 24px;
-
 }
 
 .title-exemple {
@@ -446,14 +445,18 @@ img {
 }
 
 .description-exemple {
-    color: #757575;
+    color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
 }
 
-.exemples-list-item:hover,
-.exemples-list-item:focus {
+.exemples-list-link {
+    display: block;
+}
+
+.exemples-list-link:hover,
+.exemples-list-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 } 
 
@@ -470,6 +473,10 @@ img {
 .footer-container {
     display: flex;
     align-items: baseline;
+}
+
+.left-part {
+    margin-right: 70px;
 }
 
 footer .logo {
@@ -502,8 +509,8 @@ footer .logo {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.social-list-title {
-    font-weight: 700px;
+.join {
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
